# maximally-machine-learnable-portfolios

./: .gitattributes  .gitignore  AGENT.md  CLEANUP.md  CLI_CHEATSHEET.md  CONVENTION.md  README.md  TODO.md  mace_universe.json  pyproject.toml  run_demo.sh
MMLP/: .gitattributes  GCG_MMLP__ReadMe.txt
MMLP/00_code/: MACE_MMLP_daily.R  ReadMe.txt
MMLP/00_code/001_functions/: MACE_daily.R  Trading_MV_daily.R  auxiliaries.R
MMLP/10_data/: daily__MFS_zScores.csv
configs/: demo_run.yaml  extract.example.yaml
data/: daily__MACE_paper.csv
scripts/: extract_features.py  plot_results.py  run_pipeline.py
src/mmlp/: __init__.py  logger.py
src/mmlp/analysis/: __init__.py  summary.py
src/mmlp/config/: __init__.py  dataset.py  extract.py  io.py  model.py  models.py  plotting.py  preprocessing.py  run.py  split.py  trading.py
src/mmlp/dataset/: __init__.py  calendar.py  mace_paper.py  panel.py  sp500.py  yahoo.py
src/mmlp/evaluation/: __init__.py  metrics.py  trading.py
src/mmlp/model/: __init__.py  alternating.py  backends.py  fitted.py  input.py  mace.py  schema.py
src/mmlp/plotting/: __init__.py  trading.py
tests/: test_analysis_summary.py  test_config_io.py  test_dataset_mace_paper.py  test_dataset_sp500.py  test_dataset_universe.py  test_dataset_yahoo.py  test_evaluation_metrics.py  test_evaluation_trading.py  test_logger.py  test_model_alternating.py  test_model_backend.py  test_model_input.py  test_model_mace.py  test_plotting_trading.py  test_preprocessing_panel.py  test_run_config.py  test_workflow_plotting.py  test_workflow_run.py
(+6 files in other folders)
