[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmlp"
version = "0.1.0"
description = "Clean-room rewrite of the MACE / MMLP workflow."
readme = "AGENT.md"
requires-python = ">=3.10"
authors = [
  { name = "MACE Rewrite Team" },
]
dependencies = [
  "matplotlib>=3.9",
  "pandas>=2.2",
  "pandas_market_calendars>=4.4",
  "pydantic>=2.7",
  "PyYAML>=6.0.1",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "yfinance>=0.2.54",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]
extend-exclude = ["MMLP"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
